--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/PulinTablet/workspace/CLAP/lib/colt-1.2.0.jar"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/home/pulin/Downloads/colt/lib/colt.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/home/pulin/Downloads/colt/doc/api/cern/colt/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
